crates/tachy/src/app/snapshots/tachy__app__tests__table_control_chars_120x40.snap
---
source: crates/tachy/src/app/tests.rs
expression: terminal.backend()
---
" tachy  1 t.csv                                                                                 view: all rows   NORMAL "
"    │ id  │ value              after                                           │ COLUMN                                 "
"    │ str │ str                str                                             │ id · str · col 1/3                     "
"  1 │ 1   │ \x1b[31mred\x1b[0m x                                               │ sampling…                              "
"  2 │ 2   │ tab\there          y                                               │                                        "
"  3 │ 3   │ line\nbreak        z                                               │ TOP VALUES                             "
"  4 │ 4   │ bell\x07           w                                               │ sampling…                              "
"                                                                               │                                        "
"                                                                               │ RECORD                                 "
"                                                                               │ id            1                        "
"                                                                               │ value         \x1b[31mred\x1b[0m       "
"                                                                               │ after         x                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
" t.csv · 78 B · 4 rows · delim ,  quote "  utf-8  header · mmap · index ready                        R 1 / 4  C 1/3  0% "
" / search  f filter  s sort  i inspect  : command  J jobs  q quit                                                ? help "
