crates/tachy/src/app/snapshots/tachy__app__tests__table_control_chars_80x24.snap
---
source: crates/tachy/src/app/tests.rs
expression: terminal.backend()
---
" tachy  1 t.csv                                         view: all rows   NORMAL "
"    │ id  │ value              after                                            "
"    │ str │ str                str                                              "
"  1 │ 1   │ \x1b[31mred\x1b[0m x                                                "
"  2 │ 2   │ tab\there          y                                                "
"  3 │ 3   │ line\nbreak        z                                                "
"  4 │ 4   │ bell\x07           w                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" t.csv · 78 B · 4 rows · mmap · index ready                  R 1 / 4  C 1/3  0% "
" / search  f filter  s sort  i inspect  : command  J jobs  q quit        ? help "
