crates/tachy/src/app/snapshots/tachy__app__tests__table_edited_120x40.snap
---
source: crates/tachy/src/app/tests.rs
expression: terminal.backend()
---
" tachy  1 t.csv                                                                                 view: all rows   NORMAL "
"    │ id    │ name    city    amount note                                      │ COLUMN                                 "
"    │ str ✎ │ str     str     str    str                                       │ id · str · col 1/5                     "
"  1 │ #1    │ user001 Lisbon  37.07  ok                                        │ edits     upper | prefix #             "
"  2 │ #2    │ user002 Osaka   74.14  ok                                        │ sampling…                              "
"  3 │ #3    │ user003 Toronto 111.21 ok                                        │                                        "
"  4 │ #4    │ user004 Nairobi 148.28                                           │ TOP VALUES                             "
"  5 │ #5    │ user005 Berlin  185.35 ok                                        │ sampling…                              "
"  6 │ #6    │ user006 Lisbon  222.42 ok                                        │                                        "
"  7 │ #7    │ user007 Osaka   259.49 ok                                        │ RECORD                                 "
"  8 │ #8    │ user008 Toronto 296.56                                           │ id            #1                       "
"  9 │ #9    │ user009 Nairobi 333.63 ok                                        │ name          user001                  "
" 10 │ #10   │ user010 Berlin  370.70 ok                                        │ city          Lisbon                   "
" 11 │ #11   │ user011 Lisbon  407.77 ok                                        │ amount        37.07                    "
" 12 │ #12   │ user012 Osaka   444.84                                           │ note          ok                       "
" 13 │ #13   │ user013 Toronto 481.91 ok                                        │                                        "
" 14 │ #14   │ user014 Nairobi 518.98 ok                                        │                                        "
" 15 │ #15   │ user015 Berlin  555.05 ok                                        │                                        "
" 16 │ #16   │ user016 Lisbon  592.12                                           │                                        "
" 17 │ #17   │ user017 Osaka   629.19 ok                                        │                                        "
" 18 │ #18   │ user018 Toronto 666.26 ok                                        │                                        "
" 19 │ #19   │ user019 Nairobi 703.33 ok                                        │                                        "
" 20 │ #20   │ user020 Berlin  740.40                                           │                                        "
" 21 │ #21   │ user021 Lisbon  777.47 ok                                        │                                        "
" 22 │ #22   │ user022 Osaka   814.54 ok                                        │                                        "
" 23 │ #23   │ user023 Toronto 851.61 ok                                        │                                        "
" 24 │ #24   │ user024 Nairobi 888.68                                           │                                        "
" 25 │ #25   │ user025 Berlin  925.75 ok                                        │                                        "
" 26 │ #26   │ user026 Lisbon  962.82 ok                                        │                                        "
" 27 │ #27   │ user027 Osaka   999.89 ok                                        │                                        "
" 28 │ #28   │ user028 Toronto 36.96                                            │                                        "
" 29 │ #29   │ user029 Nairobi 73.03  ok                                        │                                        "
" 30 │ #30   │ user030 Berlin  110.10 ok                                        │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
" t.csv · 844 B · 30 rows · delim ,  quote none  utf-8  header · mmap · index ready                  R 1 / 30  C 1/5  0% "
" / search  f filter  s sort  i inspect  : command  J jobs  q quit                                                ? help "
