crates/tachy/src/app/snapshots/tachy__app__tests__table_header_only_120x40.snap
---
source: crates/tachy/src/app/tests.rs
expression: terminal.backend()
---
" tachy  1 t.csv                                                                                 view: all rows   NORMAL "
"    │ a   │ b   c                                                              │ COLUMN                                 "
"    │ str │ str str                                                            │ a · str · col 1/3                      "
"                                                                               │ sampling…                              "
"                                                                               │                                        "
"                                                                               │ TOP VALUES                             "
"                                                                               │ sampling…                              "
"                                                                               │                                        "
"                                                                               │ RECORD                                 "
"                                                                               │ no row                                 "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                    0 rows                                     │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
" t.csv · 6 B · 0 rows · delim ,  quote none  utf-8  header · mmap · index ready                      R 0 / 0  C 0/3  0% "
" / search  f filter  s sort  i inspect  : command  J jobs  q quit                                                ? help "
