crates/tachy/src/app/snapshots/tachy__app__tests__table_normal_80x24.snap
---
source: crates/tachy/src/app/tests.rs
expression: terminal.backend()
---
" tachy  1 t.csv                                         view: all rows   NORMAL "
"    │ id  │ name    city    amount note                                         "
"    │ str │ str     str     str    str                                          "
"  1 │ 1   │ user001 Lisbon  37.07  ok                                           "
"  2 │ 2   │ user002 Osaka   74.14  ok                                           "
"  3 │ 3   │ user003 Toronto 111.21 ok                                           "
"  4 │ 4   │ user004 Nairobi 148.28                                              "
"  5 │ 5   │ user005 Berlin  185.35 ok                                           "
"  6 │ 6   │ user006 Lisbon  222.42 ok                                           "
"  7 │ 7   │ user007 Osaka   259.49 ok                                           "
"  8 │ 8   │ user008 Toronto 296.56                                              "
"  9 │ 9   │ user009 Nairobi 333.63 ok                                           "
" 10 │ 10  │ user010 Berlin  370.70 ok                                           "
" 11 │ 11  │ user011 Lisbon  407.77 ok                                           "
" 12 │ 12  │ user012 Osaka   444.84                                              "
" 13 │ 13  │ user013 Toronto 481.91 ok                                           "
" 14 │ 14  │ user014 Nairobi 518.98 ok                                           "
" 15 │ 15  │ user015 Berlin  555.05 ok                                           "
" 16 │ 16  │ user016 Lisbon  592.12                                              "
" 17 │ 17  │ user017 Osaka   629.19 ok                                           "
" 18 │ 18  │ user018 Toronto 666.26 ok                                           "
" 19 │ 19  │ user019 Nairobi 703.33 ok                                           "
" t.csv · 844 B · 30 rows · mmap · index ready               R 1 / 30  C 1/5  0% "
" / search  f filter  s sort  i inspect  : command  J jobs  q quit        ? help "
